update to landing page

--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -1,16 +1,17 @@
-<h1>Listing forms</h1>
+<h1>Here are some forms to fill out!</h1>
 
 <table>
   <thead>
     <tr>
-      <th colspan="3">Here Are Some Forms To Fill out!</th>
-      <th><a href="/schools/">Schools</a></th>
-      <th><a href="/life_events/">Life Events</a></th>
+      <th colspan="3">Have Fun!</th>
     </tr>
     </tr>
   </thead>
 
+  <ul>
+    <li><a href="/schools/">Schools</a></li>
+    <li><a href="/life_events/">Life Events</a></li>
+  </ul>
+
 
 <br>
-
-<%= link_to 'New Form', new_form_path %>
