added person model

--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -26,6 +26,11 @@
     <%= f.text_field :ending_year %>
   </div>
 
+  <div class="field">
+    <%= f.label :graduated %><br>
+    <%= f.check_box :graduated %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
