--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -18,6 +18,11 @@
 </p>
 
 <p>
+  <strong>Graduated?:</strong>
+  <%= @school.graduated %>
+</p>
+
+<p>
 
 
 <%= link_to 'Edit', edit_school_path(@school) %> |
