--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -6,6 +6,7 @@
       <th>School name</th>
       <th>Beginning year</th>
       <th>Ending year</th>
+      <th>Graduated?</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
         <td><%= school.school_name %></td>
         <td><%= school.beginning_year %></td>
         <td><%= school.ending_year %></td>
+        <td><%= school.graduated%></td>
         <td><%= link_to 'Show', school %></td>
         <td><%= link_to 'Edit', edit_school_path(school) %></td>
         <td><%= link_to 'Destroy', school, method: :delete, data: { confirm: 'Are you sure?' } %></td>
