--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Name:</strong>
+  <%= @person_id %>
+</p>
+
+<p>
   <strong>School name:</strong>
   <%= @school.school_name %>
 </p>
