--- a/app/views/life_events/show.html.erb
+++ b/app/views/life_events/show.html.erb
@@ -1,5 +1,10 @@
 <p id="notice"><%= notice %></p>
 
+
+<p>
+  <strong>Person:</strong>
+  <%= @life_event.person.your_name %>
+</p>
 <p>
   <strong>Event title:</strong>
   <%= @life_event.event_title %>
