--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @person_id %>
+  <%= @school.person.your_name %>
 </p>
 
 <p>
@@ -22,10 +22,7 @@
   <%= @school.ending_year %>
 </p>
 
-<p>
-  <strong>Graduated?:</strong>
-  <%= @school.graduated %>
-</p>
+
 
 <p>
 
