--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -3,11 +3,9 @@
 <table>
   <thead>
     <tr>
-<<<<<<< HEAD
-      <th>Name</th>
-=======
+
       <th>Your name</th>
->>>>>>> june18hw
+
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,11 +13,9 @@
   <tbody>
     <% @people.each do |person| %>
       <tr>
-<<<<<<< HEAD
-        <td><%= person.name %></td>
-=======
+
+
         <td><%= person.your_name %></td>
->>>>>>> june18hw
         <td><%= link_to 'Show', person %></td>
         <td><%= link_to 'Edit', edit_person_path(person) %></td>
         <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -31,3 +27,4 @@
 <br>
 
 <%= link_to 'New Person', new_person_path %>
+<%= link_to "Back Home", root_path %>
