--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -3,22 +3,22 @@
 <table>
   <thead>
     <tr>
+      <th>Name</th>
       <th>School name</th>
       <th>Beginning year</th>
       <th>Ending year</th>
-      <th>Graduated?</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
-  
+
   <tbody>
     <% @schools.each do |school| %>
       <tr>
+        <td><%= school.person.your_name %></td>
         <td><%= school.school_name %></td>
         <td><%= school.beginning_year %></td>
         <td><%= school.ending_year %></td>
-        <td><%= school.graduated%></td>
         <td><%= link_to 'Show', school %></td>
         <td><%= link_to 'Edit', edit_school_path(school) %></td>
         <td><%= link_to 'Destroy', school, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -31,4 +31,4 @@
 
 <%= link_to 'New School', new_school_path %>
 
-<a href="/forms/">Back to Forms</a>
+<%= link_to "Back Home", root_path %>
