--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -13,7 +13,7 @@
 
 
   <tbody>
-    <% @schools.each do |school| %>
+    <% @schools.order(beginning_year: :desc).each   do |school| %>
       <tr>
         <td><%= school.person.your_name %></td>
         <td><%= school.school_name %></td>
@@ -29,6 +29,6 @@
 
 <br>
 
-<%= link_to 'New School', new_school_path %>
+<%= link_to 'New School  |  ', new_school_path %>
 
 <%= link_to "Back Home", root_path %>
