--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,11 +3,11 @@
   <div class= "large-2 columns">
   </div>
 
-<div class= "large-8 large-centered columns">
+<div class= "large-7 large-centered columns">
 <h1>Hey! Fill Out Some Forms! </h1>
 </div>
 
-<div class= "large-2 columns">
+<div class= "large-3 columns">
 </div>
 </div>
 </div>
@@ -15,54 +15,71 @@
 
 <div class = "row">
 <h2 class= "subheader"> Here are some recent ones: </h2>
-<p>
+</div>
 
+<div class ="row">
+<div class="large-6 columns">
+
+
+<p>
   <p>
     <h3 class="subheader">Life Events: <br></h3>
 
     <tbody>
       <% @life_events.order(date: :desc).each do |life_event| %>
         <tr>
-          <td><h4 class= "subheader">Name:</h4></td>
-          <td><%= life_event.person.your_name %></td>
-          <td><h5>Event Name:</h5></td>
+          <td><strong>Name:</strong></td>
+          <td><%= life_event.person.your_name %><br></td>
+          <td><strong>Event Name: </strong></td>
           <td><%= life_event.event_title %><br></td>
-          <td><h5>Event Date:</h5><br></td>
+          <td><strong>Event Date: </strong></td>
           <td><%= life_event.date %><br></td>
-          <td><h5>Event Description:</h5><br></td>
-          <td><%= life_event.description %><br></td>
+          <td><strong>Event Description: </strong></td>
+          <td><%= life_event.description %><br><br></td>
+          <%break%>
           <%end %>
         </tbody>
   </p>
+</div>
 
-
+<div class="large-6 columns">
   <p>
-    <strong> Schools <br><br></strong>
+<h3 class="subheader">Schools: <br></h3>
         <tbody>
           <% @schools.order(beginning_year: :desc).each do |school| %>
             <tr>
-              <td><strong>Name:<br></strong></td>
+              <td><strong>Name: </strong></td>
               <td><%= school.person.your_name %><br></td>
-              <td><strong>School Name:<br></strong></td>
+              <td><strong>School Name: </strong></td>
               <td><%= school.school_name %><br></td>
-              <td><strong>School Start Date:<br></strong></td>
+              <td><strong>School Start Date: </strong></td>
               <td><%= school.beginning_year %><br></td>
-              <td><strong>School End Date:<br></strong></td>
+              <td><strong>School End Date: </strong></td>
               <td><%= school.ending_year %><br><br><br></td>
             </tr>
+            <%break%>
           <% end %>
         </tbody>
       </p>
+    </div>
+  </div>
+<div class = "row">
+  <div class ="large-3 columns">
+</div>
+<div class ="large-6 large-centered columns">
+
 <p>
-  <strong> Go fill out some forms! <br><br></strong>
       <tbody>
           <tr>
-            <td><%= link_to "Life Events", life_events_path %><br></td>
-            <td><%= link_to "Schools", schools_path %><br></td>
-            <td><%= link_to "People", people_path %><br><br><br></td>
+            <td><%= link_to "Life Events", life_events_path %>  |  </td>
+            <td><%= link_to "Schools", schools_path %>  |  </td>
+            <td><%= link_to "People", people_path %>  |  </td>
+              <td><%= link_to "Back Home", root_path %> </td><br><br>
           </tr>
       </tbody>
     </p>
-
-
+  </div>
+</div>
+<div class ="large-3 columns">
+</div>
 </p>
